Readability fix

--- a/css/colormode.css
+++ b/css/colormode.css
@@ -1,7 +1,7 @@
 html[data-theme="light-mode"] {
   --background-color: #d2dbd3;
   --background-color-variant: #94a593;
-  --background-color-second-variant: #8aaa7c;
+  --background-color-second-variant: #6c975a;
   --background-color-third-variant: #a50000;
   --background-color-fourth-variant: #8cb387;
   --background-color-popup-variant: #d2dbd3;
